--- a/index.html
+++ b/index.html
@@ -30,43 +30,43 @@
 				<h4 class="visit__places_adv">Places You Must Visit In Your Lifetime</h4>
 				<div class="visit__places_desc">
 					<div class="visit__places_desc-item">
-						<img src="img/places-one.jpg">
+						<img src="img/places-one.jpg" alt="">
 						<p>Azheekal</p>
 					</div>
 					<div class="visit__places_desc-item">
-						<img src="img/places-two.jpg">
+						<img src="img/places-two.jpg" alt="">
 						<p>Ooty</p>
 					</div>
 					<div class="visit__places_desc-item">
-						<img src="img/places-three.jpg">
+						<img src="img/places-three.jpg" alt="">
 						<p>Munnar</p>
 					</div>
 					<div class="visit__places_desc-item">
-						<img src="img/places-four.jpg">
+						<img src="img/places-four.jpg" alt="">
 						<p>Humpi</p>
 					</div>
 					<div class="visit__places_desc-item">
-						<img src="img/places-five.jpg">
+						<img src="img/places-five.jpg" alt="">
 						<p>Kovalam</p>
 					</div>
 					<div class="visit__places_desc-item">
-						<img src="img/places-six.jpg">
+						<img src="img/places-six.jpg" alt="">
 						<p>Kuttanad</p>
 					</div>
 					<div class="visit__places_desc-item">
-						<img src="img/places-seven.jpg">
+						<img src="img/places-seven.jpg" alt="">
 						<p>Thenmala</p>
 					</div>
 					<div class="visit__places_desc-item">
-						<img src="img/places-eight.jpg">
+						<img src="img/places-eight.jpg" alt="">
 						<p>Beach</p>
 					</div>
 					<div class="visit__places_desc-item">
-						<img src="img/places-nine.jpg">
+						<img src="img/places-nine.jpg" alt="">
 						<p>Munnar</p>
 					</div>
 					<div class="visit__places_desc-item">
-						<img src="img/places-ten.jpg">
+						<img src="img/places-ten.jpg" alt="">
 						<p>Punaloor</p>
 					</div>
 				</div>
@@ -97,9 +97,14 @@
 			</div>
 		</div>
 	</section>
-	<footer><p>Designed by cssauthor.com</p></footer>
+  <footer>
+    <p>Created by Ivan Sedyakin</p>
+    <div class="socials">
+      <a href="https://freelancehunt.com/freelancer/i__loading.html"><img src="img/fh.png" alt=""></a>
+      <a href="https://www.fl.ru/users/vana20915/portfolio/"><img src="img/fl.ico" alt=""></a>
+      <a href="https://freelance.ru/iloading"><img src="img/flru.png" alt=""></a>
+      <a href="https://github.com/i-loading"><img src="img/github.png" alt=""></a>
+    </div>
+  </footer>
 </body>
-
-
-<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </html>
