--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
   <footer>
     <p>Created by Ivan Sedyakin</p>
     <div class="socials">
-      <a href="https://freelancehunt.com/freelancer/i__loading.html"><img src="img/fh.png" alt=""></a>
-      <a href="https://www.fl.ru/users/vana20915/portfolio/"><img src="img/fl.ico" alt=""></a>
-      <a href="https://freelance.ru/iloading"><img src="img/flru.png" alt=""></a>
-      <a href="https://github.com/i-loading"><img src="img/github.png" alt=""></a>
+      <a href="https://freelancehunt.com/freelancer/i__loading.html" target="_blank"><img src="img/fh.png" alt=""></a>
+      <a href="https://www.fl.ru/users/vana20915/portfolio/" target="_blank"><img src="img/fl.ico" alt=""></a>
+      <a href="https://freelance.ru/iloading" target="_blank"><img src="img/flru.png" alt=""></a>
+      <a href="https://github.com/i-loading" target="_blank"><img src="img/github.png" alt=""></a>
     </div>
   </footer>
 </body>
