--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 		</div>
 	</section>
   <footer>
-    <p>Created by Ivan Sedyakin</p>
+    <p>Created by Ivan Sedyakin 2020</p>
     <div class="socials">
       <a href="https://freelancehunt.com/freelancer/i__loading.html" target="_blank"><img src="img/fh.png" alt=""></a>
       <a href="https://www.fl.ru/users/vana20915/portfolio/" target="_blank"><img src="img/fl.ico" alt=""></a>
