--- a/index.html
+++ b/index.html
@@ -9,102 +9,104 @@
 </head>
 
 <body>
-	<header>
-		<div class="container">
-			<nav>
-				<p class="logo"><span>Indo</span>Tourism</p>
-				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">About us</a></li>
-					<li><a href="#">Projects</a></li>
-					<li><a href="#" class="last_link">Contact us</a></li>
-				</ul>
-			</nav>
-		</div>
-	</header>
-	<section class="main_section">
-		<div class="container">
-			<h1>I Like To Ask The Same Question <br><span>Many Many Times</span></h1>
-			<a href="#" class="ask">Ok ask me</a>
-			<div class="visit__places">
-				<h4 class="visit__places_adv">Places You Must Visit In Your Lifetime</h4>
-				<div class="visit__places_desc">
-					<div class="visit__places_desc-item">
-						<img src="img/places-one.jpg" alt="">
-						<p>Azheekal</p>
-					</div>
-					<div class="visit__places_desc-item">
-						<img src="img/places-two.jpg" alt="">
-						<p>Ooty</p>
-					</div>
-					<div class="visit__places_desc-item">
-						<img src="img/places-three.jpg" alt="">
-						<p>Munnar</p>
-					</div>
-					<div class="visit__places_desc-item">
-						<img src="img/places-four.jpg" alt="">
-						<p>Humpi</p>
-					</div>
-					<div class="visit__places_desc-item">
-						<img src="img/places-five.jpg" alt="">
-						<p>Kovalam</p>
-					</div>
-					<div class="visit__places_desc-item">
-						<img src="img/places-six.jpg" alt="">
-						<p>Kuttanad</p>
-					</div>
-					<div class="visit__places_desc-item">
-						<img src="img/places-seven.jpg" alt="">
-						<p>Thenmala</p>
-					</div>
-					<div class="visit__places_desc-item">
-						<img src="img/places-eight.jpg" alt="">
-						<p>Beach</p>
-					</div>
-					<div class="visit__places_desc-item">
-						<img src="img/places-nine.jpg" alt="">
-						<p>Munnar</p>
-					</div>
-					<div class="visit__places_desc-item">
-						<img src="img/places-ten.jpg" alt="">
-						<p>Punaloor</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<section class="secondary_section">
-		<div class="container">
-			<h3>We’ve since expanded our life list to 43 sites around the world</h3>
-			<h4 class="inner_title">43 Places to See Before You Die</h4>
-			<div class="advantages">
-				<div class="advantages__item">
-					<img src="img/shape-one.png" alt="">
-					<h4>Sites the world</h4>
-				</div>
-				<div class="advantages__item">
-					<img src="img/shape-two.png" alt="">
-					<h4>Shopping</h4>
-				</div>
-				<div class="advantages__item">
-					<img src="img/shape-three.png" alt="">
-					<h4>Photography</h4>
-				</div>
-				<div class="advantages__item">
-					<img src="img/shape-four.png" alt="">
-					<h4>Find the best</h4>
-				</div>
-			</div>
-		</div>
-	</section>
-  <footer>
-    <p>Created by Ivan Sedyakin 2020</p>
-    <div class="socials">
-      <a href="https://freelancehunt.com/freelancer/i__loading.html" target="_blank"><img src="img/fh.png" alt=""></a>
-      <a href="https://www.fl.ru/users/vana20915/portfolio/" target="_blank"><img src="img/fl.ico" alt=""></a>
-      <a href="https://freelance.ru/iloading" target="_blank"><img src="img/flru.png" alt=""></a>
-      <a href="https://github.com/i-loading" target="_blank"><img src="img/github.png" alt=""></a>
-    </div>
-  </footer>
+	<div class="wrapper">
+    <header>
+      <div class="container">
+        <nav>
+          <p class="logo"><span>Indo</span>Tourism</p>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#" class="last_link">Contact us</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <section class="main_section">
+      <div class="container">
+        <h1>I Like To Ask The Same Question <br><span>Many Many Times</span></h1>
+        <a href="#" class="ask">Ok ask me</a>
+        <div class="visit__places">
+          <h4 class="visit__places_adv">Places You Must Visit In Your Lifetime</h4>
+          <div class="visit__places_desc">
+            <div class="visit__places_desc-item">
+              <img src="img/places-one.jpg" alt="">
+              <p>Azheekal</p>
+            </div>
+            <div class="visit__places_desc-item">
+              <img src="img/places-two.jpg" alt="">
+              <p>Ooty</p>
+            </div>
+            <div class="visit__places_desc-item">
+              <img src="img/places-three.jpg" alt="">
+              <p>Munnar</p>
+            </div>
+            <div class="visit__places_desc-item">
+              <img src="img/places-four.jpg" alt="">
+              <p>Humpi</p>
+            </div>
+            <div class="visit__places_desc-item">
+              <img src="img/places-five.jpg" alt="">
+              <p>Kovalam</p>
+            </div>
+            <div class="visit__places_desc-item">
+              <img src="img/places-six.jpg" alt="">
+              <p>Kuttanad</p>
+            </div>
+            <div class="visit__places_desc-item">
+              <img src="img/places-seven.jpg" alt="">
+              <p>Thenmala</p>
+            </div>
+            <div class="visit__places_desc-item">
+              <img src="img/places-eight.jpg" alt="">
+              <p>Beach</p>
+            </div>
+            <div class="visit__places_desc-item">
+              <img src="img/places-nine.jpg" alt="">
+              <p>Munnar</p>
+            </div>
+            <div class="visit__places_desc-item">
+              <img src="img/places-ten.jpg" alt="">
+              <p>Punaloor</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="secondary_section">
+      <div class="container">
+        <h3>We’ve since expanded our life list to 43 sites around the world</h3>
+        <h4 class="inner_title">43 Places to See Before You Die</h4>
+        <div class="advantages">
+          <div class="advantages__item">
+            <img src="img/shape-one.png" alt="">
+            <h4>Sites the world</h4>
+          </div>
+          <div class="advantages__item">
+            <img src="img/shape-two.png" alt="">
+            <h4>Shopping</h4>
+          </div>
+          <div class="advantages__item">
+            <img src="img/shape-three.png" alt="">
+            <h4>Photography</h4>
+          </div>
+          <div class="advantages__item">
+            <img src="img/shape-four.png" alt="">
+            <h4>Find the best</h4>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <p>Created by Ivan Sedyakin</p>
+      <div class="socials">
+        <a href="https://freelancehunt.com/freelancer/i__loading.html" target="_blank"><img src="img/fh.png" alt=""></a>
+        <a href="https://www.fl.ru/users/vana20915/portfolio/" target="_blank"><img src="img/fl.ico" alt=""></a>
+        <a href="https://freelance.ru/iloading" target="_blank"><img src="img/flru.png" alt=""></a>
+        <a href="https://github.com/i-loading" target="_blank"><img src="img/github.png" alt=""></a>
+      </div>
+    </footer>
+  </div>
 </body>
 </html>
